[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Matthew J Perez <matt@mperez.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = ">=0.7.15"
config = "0.11.0"
reqwest = "0.11.2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dev-dependencies]
actix-rt = "2"
tokio = "1"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]
